--- a/Sentiment Model.ipynb
+++ b/Sentiment Model.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "#Reading csv file and storing it in a dataframe\n",
-    "df=pd.read_csv(r\"C:\\Users\\Fuzail Ansari\\Downloads\\train (1).csv\")"
+    "df=pd.read_csv(\"Data.csv\")"
    ]
   },
   {
